# fallout1-ce

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
companion_app/: README.md  config.example.json  pyproject.toml
companion_app/companion_app/: __init__.py  __main__.py  app.py  config.py
companion_app/companion_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
companion_app/companion_app/assets/: FONT_LICENSE.md  __init__.py
companion_app/companion_app/input/: events.py  keyboard.py
companion_app/companion_app/net/: __init__.py  client.py  framing.py
companion_app/companion_app/render/: __init__.py  background.py  crt.py  font.py  palette.py  worldmap_image.py
companion_app/companion_app/state/: __init__.py  models.py
companion_app/companion_app/ui/: __init__.py  console.py  layout.py  segmented_header.py  shell.py  status.py
companion_app/companion_app/ui/pages/: __init__.py  boot.py  data.py  inventory.py  map.py  status.py
companion_app/docs/: architecture.md
companion_app/examples/: keymap-default.json  keymap-swapped-encoder.json  m2-debug-overlay.json  m2-default.json  m3-default.json  malformed.json
companion_app/tests/: __init__.py  test_app.py  test_boot.py  test_client.py  test_config.py  test_console.py  test_crt.py  test_event_log.py  test_events.py  test_framing.py  test_keyboard.py  test_localmap.py  test_pages.py  test_render.py  test_segmented_header.py  test_shell.py  test_state.py  test_status.py  test_worldmap.py
scripts/: companion_smoke_test.py
src/: companion_item_catalog.cc  (+11 more)
(+22 files in other folders)
